# docs/swagger.json
@@ -871,6 +871,12 @@
                 "size_str": {
                     "type": "string"
                 },
+                "status": {
+                    "type": "integer"
+                },
+                "status_str": {
+                    "type": "string"
+                },
                 "url": {
                     "type": "string"
                 }
@@ -896,6 +902,12 @@
                     "type": "integer"
                 },
                 "size_str": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "status_str": {
                     "type": "string"
                 },
                 "url": {
@@ -1054,18 +1066,6 @@
                 },
                 "updated_at": {
                     "type": "string"
-                },
-                "used_storage": {
-                    "type": "integer"
-                },
-                "used_storage_str": {
-                    "type": "string"
-                },
-                "used_traffic": {
-                    "type": "integer"
-                },
-                "used_traffic_str": {
-                    "type": "string"
                 }
             }
         },
@@ -1140,10 +1140,22 @@
                 "total_storage_str": {
                     "type": "string"
                 },
+                "total_traffic": {
+                    "type": "integer"
+                },
+                "total_traffic_str": {
+                    "type": "string"
+                },
                 "used_storage": {
                     "type": "integer"
                 },
                 "used_storage_str": {
+                    "type": "string"
+                },
+                "used_traffic": {
+                    "type": "integer"
+                },
+                "used_traffic_str": {
                     "type": "string"
                 }
             }
